@@ -26,12 +26,11 @@ package com.silverpeas.component.kmelia;
 import java.rmi.RemoteException;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 
-import com.silverpeas.util.ForeignPK;
 import com.stratelia.silverpeas.silvertrace.SilverTrace;
-import com.stratelia.silverpeas.wysiwyg.WysiwygException;
 import com.stratelia.silverpeas.wysiwyg.control.WysiwygController;
 import com.stratelia.webactiv.beans.admin.AdminController;
 import com.stratelia.webactiv.beans.admin.ObjectType;
@@ -42,8 +41,6 @@ import com.stratelia.webactiv.kmelia.model.KmeliaRuntimeException;
 import com.stratelia.webactiv.util.DateUtil;
 import com.stratelia.webactiv.util.EJBUtilitaire;
 import com.stratelia.webactiv.util.JNDINames;
-import com.stratelia.webactiv.util.attachment.control.AttachmentController;
-import com.stratelia.webactiv.util.attachment.ejb.AttachmentException;
 import com.stratelia.webactiv.util.exception.SilverpeasRuntimeException;
 import com.stratelia.webactiv.util.node.control.NodeBm;
 import com.stratelia.webactiv.util.node.control.NodeBmHome;
@@ -59,13 +56,11 @@ public class KmeliaPaste implements ComponentPasteInterface {
   String userId;
 
   public KmeliaPaste() {
-    // TODO Auto-generated constructor stub
   }
 
   @Override
   public void paste(PasteDetail pasteDetail) throws RemoteException {
     SilverTrace.debug("kmelia", "KmeliaPaste.paste()", "root.MSG_GEN_ENTER_METHOD");
-    // TODO Auto-generated method stub
     fromComponentId = pasteDetail.getFromComponentId();
     toComponentId = pasteDetail.getToComponentId();
     userId = pasteDetail.getUserId();
@@ -76,10 +71,11 @@ public class KmeliaPaste implements ComponentPasteInterface {
     // Get level 1 nodes
     NodePK rootPK = getNodePK("0", fromComponentId);
     List<NodeDetail> firstLevelNodes = getNodeBm().getHeadersByLevel(rootPK, 2);
+    HashMap<Integer, Integer> oldAndNewIds = new HashMap<Integer, Integer>();
     for (int i = 0; i < firstLevelNodes.size(); i++) {
       NodeDetail nodeToPaste = (NodeDetail) firstLevelNodes.get(i);
       if (nodeToPaste.getId() > 2) // Don't take unbalanced and basket nodes
-        pasteNode(nodeToPaste, father, false);
+        pasteNode(nodeToPaste, father, oldAndNewIds);
     }
     SilverTrace.debug("kmelia", "KmeliaPaste.paste()", "root.MSG_GEN_EXIT_METHOD");
   }
@@ -91,108 +87,72 @@ public class KmeliaPaste implements ComponentPasteInterface {
    * @param isCutted
    * @throws RemoteException
    */
-  private void pasteNode(NodeDetail nodeToPaste, NodeDetail father, boolean isCutted)
-      throws RemoteException {
+  private void pasteNode(NodeDetail nodeToPaste, NodeDetail father,
+      HashMap<Integer, Integer> oldAndNewIds) throws RemoteException {
     SilverTrace.debug("kmelia", "KmeliaPaste.pasteNode()", "root.MSG_GEN_ENTER_METHOD");
     NodePK nodeToPastePK = nodeToPaste.getNodePK();
-    List treeToPaste = getNodeBm().getSubTree(nodeToPastePK);
 
-    if (isCutted) {
-      // move node and subtree
-      getNodeBm().moveNode(nodeToPastePK, father.getNodePK());
-
-      NodeDetail fromNode = null;
-      NodePK toNodePK = null;
-      for (int i = 0; i < treeToPaste.size(); i++) {
-        fromNode = (NodeDetail) treeToPaste.get(i);
-        if (fromNode != null) {
-          toNodePK = getNodePK(fromNode.getNodePK().getId());
-
-          // move wysiwyg
-          try {
-            AttachmentController.moveAttachments(new ForeignPK("Node_" + fromNode.getNodePK()),
-                new ForeignPK("Node_" + toNodePK.getId(), toComponentId), true); // Change
-                                                                                 // instanceId +
-                                                                                 // move files
-          } catch (AttachmentException e) {
-            SilverTrace.error("kmelia", "KmeliaPaste.pasteNode()", "root.MSG_GEN_PARAM_VALUE",
-                "kmelia.CANT_MOVE_ATTACHMENTS", e);
-          }
-
-          // change images path in wysiwyg
-          try {
-            WysiwygController.wysiwygPlaceHaveChanged(fromNode.getNodePK().getInstanceId(),
-                "Node_" + fromNode.getNodePK().getId(), toComponentId, "Node_" + toNodePK.getId());
-          } catch (WysiwygException e) {
-            SilverTrace.error("kmelia", "KmeliaPaste.pasteNode()", "root.MSG_GEN_PARAM_VALUE", e);
-          }
-        }
-      }
-    } else {
-      // paste topic
-      NodePK nodePK = new NodePK("unknown", toComponentId);
-      NodeDetail node = new NodeDetail();
-      node.setNodePK(nodePK);
-      node.setCreatorId(userId);
-      node.setName(nodeToPaste.getName());
-      node.setDescription(nodeToPaste.getDescription());
-      node.setTranslations(nodeToPaste.getTranslations());
-      node.setCreationDate(DateUtil.today2SQLDate());
-      node.setStatus(nodeToPaste.getStatus());
-      nodePK = getNodeBm().createNode(node, father);
-      if (nodeToPaste.haveLocalRights())
-        node.setRightsDependsOn(new Integer(nodePK.getId()).intValue());
-      else
-        node.setRightsDependsOn(-1);
-      getNodeBm().updateRightsDependency(node);
-
-      // Set topic rights if necessary
+    // paste topic
+    NodePK nodePK = new NodePK("unknown", toComponentId);
+    NodeDetail node = new NodeDetail();
+    node.setNodePK(nodePK);
+    node.setCreatorId(userId);
+    node.setName(nodeToPaste.getName());
+    node.setDescription(nodeToPaste.getDescription());
+    node.setTranslations(nodeToPaste.getTranslations());
+    node.setCreationDate(DateUtil.today2SQLDate());
+    node.setStatus(nodeToPaste.getStatus());
+    nodePK = getNodeBm().createNode(node, father);
+    oldAndNewIds.put(Integer.parseInt(nodeToPastePK.getId()), Integer.parseInt(nodePK.getId()));
+    if (nodeToPaste.haveRights()) {
       if (nodeToPaste.haveLocalRights()) {
-        List<ProfileInst> topicProfiles = getTopicProfiles(nodeToPaste.getNodePK().getId());
-        for (int i = 0; i < topicProfiles.size(); i++) {
-          ProfileInst nodeToPasteProfile = (ProfileInst) topicProfiles.get(i);
-          if (nodeToPasteProfile != null) {
-            ProfileInst nodeProfileInst = (ProfileInst) nodeToPasteProfile.clone();
-            nodeProfileInst.setId("-1");
-            nodeProfileInst.setComponentFatherId(toComponentId);
-            nodeProfileInst.setObjectId(new Integer(nodePK.getId()).intValue());
-            nodeProfileInst.setObjectType(nodeToPasteProfile.getObjectType());
-            nodeProfileInst.setObjectFatherId(father.getId());
-            // Add the profile
-            m_AdminCtrl.addProfileInst(nodeProfileInst, userId);
-          }
+        node.setRightsDependsOn(Integer.parseInt(nodePK.getId()));
+      } else {
+        int oldRightsDependsOn = nodeToPaste.getRightsDependsOn();
+        Integer newRightsDependsOn = oldAndNewIds.get(Integer.valueOf(oldRightsDependsOn));
+        node.setRightsDependsOn(newRightsDependsOn.intValue());
+      }
+      getNodeBm().updateRightsDependency(node);
+    }
+    // Set topic rights if necessary
+    if (nodeToPaste.haveLocalRights()) {
+      List<ProfileInst> topicProfiles = getTopicProfiles(nodeToPaste.getNodePK().getId());
+      for (int i = 0; i < topicProfiles.size(); i++) {
+        ProfileInst nodeToPasteProfile = (ProfileInst) topicProfiles.get(i);
+        if (nodeToPasteProfile != null) {
+          ProfileInst nodeProfileInst = (ProfileInst) nodeToPasteProfile.clone();
+          nodeProfileInst.setId("-1");
+          nodeProfileInst.setComponentFatherId(toComponentId);
+          nodeProfileInst.setObjectId(new Integer(nodePK.getId()).intValue());
+          nodeProfileInst.setObjectType(nodeToPasteProfile.getObjectType());
+          nodeProfileInst.setObjectFatherId(father.getId());
+          // Add the profile
+          m_AdminCtrl.addProfileInst(nodeProfileInst, userId);
         }
-      }
-
-      // paste wysiwyg attached to node
-      WysiwygController.copy(null, nodeToPastePK.getInstanceId(), "Node_" + nodeToPastePK.getId(),
-          null, toComponentId, "Node_" + nodePK.getId(), userId);
-
-      List nodeIdsToPaste = new ArrayList();
-      NodeDetail oneNodeToPaste = null;
-      for (int i = 0; i < treeToPaste.size(); i++) {
-        oneNodeToPaste = (NodeDetail) treeToPaste.get(i);
-        if (oneNodeToPaste != null)
-          nodeIdsToPaste.add(oneNodeToPaste.getNodePK());
-      }
-
-      // paste subtopics
-      node = getNodeBm().getHeader(nodePK);
-      Collection subtopics = getNodeBm().getDetail(nodeToPastePK).getChildrenDetails();
-      Iterator itSubTopics = subtopics.iterator();
-      NodeDetail subTopic = null;
-      while (itSubTopics != null && itSubTopics.hasNext()) {
-        subTopic = (NodeDetail) itSubTopics.next();
-        if (subTopic != null)
-          pasteNode(subTopic, node, isCutted);
       }
     }
+
+    // paste wysiwyg attached to node
+    WysiwygController.copy(null, nodeToPastePK.getInstanceId(), "Node_" + nodeToPastePK.getId(),
+        null, toComponentId, "Node_" + nodePK.getId(), userId);
+
+    // paste subtopics
+    node = getNodeBm().getHeader(nodePK);
+    Collection<NodeDetail> subtopics = getNodeBm().getDetail(nodeToPastePK).getChildrenDetails();
+    Iterator<NodeDetail> itSubTopics = subtopics.iterator();
+    NodeDetail subTopic = null;
+    while (itSubTopics != null && itSubTopics.hasNext()) {
+      subTopic = itSubTopics.next();
+      if (subTopic != null)
+        pasteNode(subTopic, node, oldAndNewIds);
+    }
+
     SilverTrace.debug("kmelia", "KmeliaPaste.pasteNode()", "root.MSG_GEN_EXIT_METHOD");
   }
 
   public List<ProfileInst> getTopicProfiles(String topicId) {
     SilverTrace.debug("kmelia", "KmeliaPaste.getTopicProfiles()", "root.MSG_GEN_ENTER_METHOD");
-    List alShowProfile = new ArrayList();
+    List<ProfileInst> alShowProfile = new ArrayList<ProfileInst>();
     ProfileInst profile = null;
 
     // profils dispo
